--- a/myTileMap/style.css
+++ b/myTileMap/style.css
@@ -2,7 +2,7 @@ body{
     background-color: gray;
 }
 
-canvas{
+#canvas{
     width: 1080px;
     height: 720px;
     border: 1px solid black;
@@ -12,4 +12,26 @@ canvas{
     left: 50%;
 
     transform: translate(-50%, -50%);
+}
+
+.canvas2{
+    background-color: rgb(44, 44, 44);
+
+    display: none;
+
+    transform: none;
+
+    position: absolute;
+    top: unset;
+    left: unset;
+    bottom: 20px;
+    right: 20px;
+
+    width: 300px;
+    height: 400px;
+    z-index: 200;
+}
+
+.show{
+    display: block;
 }
